--- a/arch/arm/boot/dts/aspeed-bmc-opp-garrison.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-garrison.dts
@@ -13,7 +13,7 @@
 
 	chosen {
 		stdout-path = &uart5;
-		bootargs = "console=ttyS4,115200";
+		bootargs = "console=ttyS4,115200 earlyprintk";
 	};
 
 	memory {
@@ -33,34 +33,39 @@
 
 	ahb {
 
-		fmc@1e620000 {
+		bmc_pnor: fmc@1e620000 {
 			reg = < 0x1e620000 0x94
 				0x20000000 0x02000000 >;
 			#address-cells = <1>;
 			#size-cells = <0>;
 			compatible = "aspeed,ast2400-fmc";
-
+			aspeed,fmc-has-dma;
+			interrupts = <19>;
+			clocks = <&clk_ahb>;
+			clock-names = "ahb";
 			flash@0 {
 				reg = < 0 >;
 				compatible = "jedec,spi-nor" ;
+				m25p,fast-read;
 #include "aspeed-bmc-opp-flash-layout.dtsi"
 			};
 		};
-		spi@1e630000 {
+
+		host_pnor: spi@1e630000 {
 			reg = < 0x1e630000 0x18
 				0x30000000 0x02000000 >;
 			#address-cells = <1>;
 			#size-cells = <0>;
 			compatible = "aspeed,ast2400-spi";
-			flash@0 {
+			clocks = <&clk_ahb>;
+			clock-names = "ahb";
+			flash {
 				reg = < 0 >;
 				compatible = "jedec,spi-nor" ;
 				label = "pnor";
-				/* spi-max-frequency = <>; */
-				/* m25p,fast-read; */
+				m25p,fast-read;
 			};
 		};
-
 	};
 };
 
@@ -69,6 +74,11 @@
 
 	use-ncsi;
 };
+
+&uart5 {
+	status = "okay";
+};
+
 
 &i2c4 {
 	status = "okay";
@@ -106,5 +116,9 @@
 };
 
 &i2c13 {
+	status = "okay";
+};
+
+&vuart {
 	status = "okay";
 };
