--- a/arch/arm/boot/dts/aspeed-g4.dtsi
+++ b/arch/arm/boot/dts/aspeed-g4.dtsi
@@ -95,6 +95,12 @@
 					reg = <0x2c>;
 				};
 
+				hwrng@1e6e2078 {
+					compatible = "timeriomem_rng";
+					reg = <0x1e6e2078 0x4>;
+					period = <1>;
+				};
+
 				pinctrl: pinctrl@1e6e2000 {
 					compatible = "aspeed,g4-pinctrl";
 
