ARM: dts: witherspoon: Add Infineon DSP310 i2c part
Signed-off-by: Joel Stanley <joel@jms.id.au>

--- a/arch/arm/boot/dts/aspeed-bmc-opp-witherspoon.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-witherspoon.dts
@@ -172,6 +172,11 @@
 		compatible = "maxim,max31785";
 		reg = <0x52>;
 	};
+
+	dps310@76 {
+		compatible = "infineon,dps310";
+		reg = <0x76>;
+	};
 };
 
 &i2c4 {
