ARM: dts: aspeed: Rename aspeed-bmc-opp-flash-layout.dtsi
Rename aspeed-bmc-opp-flash-layout.dtsi to openbmc-flash-layout.dtsi
as this file is not open power specific.

OpenBMC-Staging-Count: 1
Signed-off-by: James Feist <james.feist@linux.intel.com>
Signed-off-by: Joel Stanley <joel@jms.id.au>

--- a/arch/arm/boot/dts/aspeed-bmc-opp-palmetto.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-palmetto.dts
@@ -65,7 +65,7 @@
 	flash@0 {
 		status = "okay";
 		m25p,fast-read;
-#include "aspeed-bmc-opp-flash-layout.dtsi"
+#include "openbmc-flash-layout.dtsi"
 	};
 };
 
