--- a/arch/arm/boot/dts/aspeed-bmc-quanta-q71l.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-quanta-q71l.dts
@@ -230,6 +230,7 @@
 		reg = <0x74>;
 		#address-cells = <1>;
 		#size-cells = <0>;
+		i2c-mux-idle-disconnect;  /* may use mux@77 next. */
 	};
 
 	/* 0: PCIe Slot 1,
@@ -246,6 +247,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg = <0x77>;
+		i2c-mux-idle-disconnect;  /* may use mux@74 next. */
 	};
 };
 
