dts: enable JTAG driver function
Enable upstream community JTAG driver function
* update the Mt. Jade DTS file (aspeed-bmc-ampere-mtjade.dts)

Signed-off-by: Daniel Goehring <dgoehrin@os.amperecomputing.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -473,6 +473,11 @@
 	};
 };
 
+&jtag {
+	status = "okay";
+	compatible = "aspeed,ast2500-jtag";
+};
+
 &gfx {
 	status = "okay";
 	memory-region = <&gfx_memory>;
