--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -426,6 +426,11 @@
 	status = "okay";
 };
 
+&jtag {
+	status = "okay";
+	compatible = "aspeed,ast2500-jtag";
+};
+
 &gfx {
 	status = "okay";
 	memory-region = <&gfx_memory>;
