ARM: dts: aspeed: mtjade: Add smpro-misc node
This commit adds smpro-misc node to Ampere MtJade device tree.
smpro-misc is a driver that handle boot_process and acpi_power_limit
settings.

Signed-off-by: Quan Nguyen <qnguyen@amperecomputing.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -382,6 +382,26 @@
 
 &i2c2 {
 	status = "okay";
+	smpro@4f {
+		compatible = "ampere,smpro";
+		reg = <0x4f>;
+		hwmon {
+			compatible = "ampere,ac01-hwmon";
+		};
+		misc {
+			compatible = "ampere,ac01-misc";
+		};
+	};
+	smpro@4e {
+		compatible = "ampere,smpro";
+		reg = <0x4e>;
+		hwmon {
+			compatible = "ampere,ac01-hwmon";
+		};
+		misc {
+			compatible = "ampere,ac01-misc";
+		};
+	};
 };
 
 &i2c3 {
