--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -391,6 +391,9 @@
 		misc {
 			compatible = "ampere,ac01-misc";
 		};
+		errmon {
+			compatible = "ampere,ac01-errmon";
+		};
 	};
 	smpro@4e {
 		compatible = "ampere,smpro";
@@ -400,6 +403,9 @@
 		};
 		misc {
 			compatible = "ampere,ac01-misc";
+		};
+		errmon {
+			compatible = "ampere,ac01-errmon";
 		};
 	};
 };
