--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -282,6 +282,43 @@
 		/* spi-max-frequency = <50000000>; */
 #include "openbmc-flash-layout.dtsi"
 	};
+
+	flash@1 {
+		status = "okay";
+		m25p,fast-read;
+		label = "alt-bmc";
+		/* spi-max-frequency = <50000000>; */
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			u-boot@0 {
+				reg = <0x0 0x60000>;
+				label = "alt-u-boot";
+			};
+
+			u-boot-env@60000 {
+				reg = <0x60000 0x20000>;
+				label = "alt-u-boot-env";
+			};
+
+			kernel@80000 {
+				reg = <0x80000 0x440000>;
+				label = "alt-kernel";
+			};
+
+			rofs@c0000 {
+				reg = <0x4c0000 0x1740000>;
+				label = "alt-rofs";
+			};
+
+			rwfs@1c00000 {
+				reg = <0x1c00000 0x400000>;
+				label = "alt-rwfs";
+			};
+		};
+	};
 };
 
 &spi1 {
