--- a/drivers/char/ipmi/Kconfig
+++ b/drivers/char/ipmi/Kconfig
@@ -149,6 +149,18 @@ config ASPEED_SSIF_IPMI_BMC
 	  The driver implements the BMC side of
 	  the IPMI over SSIF interface.
 
+config NPCM7XX_SSIF_IPMI_BMC
+	depends on ARCH_ASPEED || COMPILE_TEST
+	depends on I2C
+	select SSIF_IPMI_BMC
+	select I2C_SLAVE
+	tristate "Nuvonton SSIF IPMI BMC driver"
+	help
+	  Provides a driver for the Nuvoton SSIF IPMI interface
+
+	  The driver implements the BMC side of
+	  the IPMI over SSIF interface.
+
 config IPMB_DEVICE_INTERFACE
 	tristate 'IPMB Interface handler'
 	depends on I2C
