ARM: dts: aspeed: mtjade: Add P3V_BAT_BRIDGE_EN gpio
Add gpio P3V_BAT_BRIDGE_EN to enable VBAT_RTC sensor for reading.

Tested:
	1. Call "gpiofind P3V_BAT_BRIDGE_EN" in bmc console.
	2. The output should be "gpiochip0 148"

Signed-off-by: Thu Ba Nguyen <tbnguyen@amperecomputing.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -882,7 +882,7 @@
 	/*Q0-Q7*/	"","","","","","UID_BUTTON","","",
 	/*R0-R7*/	"","","BMC_EXT_HIGHTEMP_L","OCP_AUX_PWREN",
 			"OCP_MAIN_PWREN","RESET_BUTTON","","",
-	/*S0-S7*/	"","","","","","","","",
+	/*S0-S7*/	"","","","","P3V_BAT_BRIDGE_EN","","","",
 	/*T0-T7*/	"","","","","","","","",
 	/*U0-U7*/	"","","","","","","","",
 	/*V0-V7*/	"","","","","","","","",
