ARM: dts: aspeed: mtjade: Add Sx_SCP_AUTH_FAIL GPIO
This commit will add the S0_SCP_AUTH_FAIL (GPIOJ2)
and S1_SCP_AUTH_FAIL (GPIOZ5) to device tree

Signed-off-by: Chanh Nguyen <chanh@os.amperecomputing.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -135,6 +135,18 @@
 			linux,code = <ASPEED_GPIO(J, 1)>;
 		};
 
+		S0_scp_auth_fail {
+			label = "S0_SCP_AUTH_FAIL";
+			gpios = <&gpio ASPEED_GPIO(J, 2) GPIO_ACTIVE_LOW>;
+			linux,code = <ASPEED_GPIO(J, 2)>;
+		};
+
+                S1_scp_auth_fail {
+                        label = "S1_SCP_AUTH_FAIL";
+                        gpios = <&gpio ASPEED_GPIO(Z, 5) GPIO_ACTIVE_LOW>;
+                        linux,code = <ASPEED_GPIO(Z, 5)>;
+                };
+
 		S1_overtemp {
 			label = "S1_OVERTEMP";
 			gpios = <&gpio ASPEED_GPIO(Z, 6) GPIO_ACTIVE_LOW>;
